# FastGArSim

./: .gitignore
analysis/: EventToNtupleConverter.C  mu_pi_features.C  neutron_analysis.C
detector_simulation/: CMakeLists.txt  EventToNtupleConverter.C  GArGeometry.gdml  GArSimulation.cc  README.md  fnal_setup.sh
detector_simulation/include/: ActionInitialization.hh  AnalysisManager.hh  DataTypeConverters.hh  DataTypes.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  GENIEGeneratorAction.hh  GunGeneratorAction.hh  GunGeneratorMessenger.hh  NuWroGeneratorAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  ROOTDataTypes.hh  ROOTDataTypesLinkDef.h  RunAction.hh  SteppingAction.hh  TrackingAction.hh
detector_simulation/jobs/: README.md  configure_grid.py  grid_config_example.json  grid_setup.sh  launch_job.sh  make_tarball.sh  run_grid.sh
detector_simulation/macros/: gun.mac  init.mac  init_base.mac  init_gun.mac  nu.mac  run.mac  vis.mac
detector_simulation/src/: ActionInitialization.cc  AnalysisManager.cc  DataTypeConverters.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  GENIEGeneratorAction.cc  GunGeneratorAction.cc  GunGeneratorMessenger.cc  NuWroGeneratorAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc
detector_simulation/utils/: EventToNtupleConverter.C  GeoVis.C
